--- a/RPIControllerEmulator_Server/MainWindow.xaml
+++ b/RPIControllerEmulator_Server/MainWindow.xaml
@@ -5,39 +5,45 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RPIControllerEmulator_Server"
         mc:Ignorable="d"
-        Title="ControllerEmulator" Height="450" Width="800">
+        Title="ControllerEmulator" Height="240" Width="800" Background="#FFCACCF1">
     <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="71*"/>
+            <ColumnDefinition Width="122*"/>
+        </Grid.ColumnDefinitions>
         <!--- Connection -->
-        <Label Content="Connection type:" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="uartRadioButton" Content="UART" Margin="200,25,0,330"  Style="{StaticResource RadioButtonStyle}"/>
-        <RadioButton x:Name="bluetootRadioButton" Content="Bluetooth" Margin="350,25,0,330"  Style="{StaticResource RadioButtonStyle}"/>
-        <RadioButton x:Name="networkRadioButton" Content="Network" Margin="550,25,0,330" Style="{StaticResource RadioButtonStyle}" Width="130"/>
+        <Label Content="Connection type:" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="uartRadioButton" Content="UART" Margin="200,25,0,0"  Style="{StaticResource RadioButtonStyle}" RenderTransformOrigin="0.75,2.211"/>
+        <RadioButton x:Name="bluetootRadioButton" Content="Bluetooth" Margin="66.266,25,0,0"  Style="{StaticResource RadioButtonStyle}" Grid.Column="1"/>
+        <RadioButton x:Name="networkRadioButton" Content="Network" Margin="266.266,25,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
+        <Label x:Name="connectionStatusLabel" Content="Connection status: Disconnected" FontSize="15" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
         <Button x:Name="ConnectButton"
             Content="Connect"
             Click="ConnectButton_Click"
             FontSize="20"
             FontWeight="Bold"
             HorizontalAlignment="Center"
-            Margin="0,90,0,0"
+            Margin="395.266,15,12,0"
             VerticalAlignment="Top"
-            Width="Auto"
-        />  
+            Width="Auto" Grid.Column="1"
+        />
         <!-- Controler type -->
-        <Label Content="Controller type:" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Keyboard" Margin="200,150,0,200"  Style="{StaticResource RadioButtonStyle}"/>
-        <RadioButton Content="Joystic" Margin="350,150,0,200"  Style="{StaticResource RadioButtonStyle}"/>
-        <RadioButton Content="Remote" Margin="480,150,0,200" Style="{StaticResource RadioButtonStyle}" Width="130"/>
-        <RadioButton Content="Custom" Margin="620,150,0,200" Style="{StaticResource RadioButtonStyle}" Width="130"/>
+        <Label Content="Controller type:" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top"/>
+        <RadioButton Content="Keyboard" Margin="200,110,0,0"  Style="{StaticResource RadioButtonStyle}"/>
+        <RadioButton Content="Joystic" Margin="66.266,110,0,0"  Style="{StaticResource RadioButtonStyle}" Grid.Column="1"/>
+        <RadioButton Content="Remote" Margin="196.266,110,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
+        <RadioButton Content="Custom" Margin="336.266,110,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
         <Button x:Name="ShowControllerButton"
             Content="Show Controller"
                 
             FontSize="20"
             FontWeight="Bold"
             HorizontalAlignment="Center"
-            Margin="0,200,0,0"
+            Margin="24.266,150,308,0"
             VerticalAlignment="Top"
-            Width="Auto"
+            Width="Auto" Grid.Column="1"
         />
+
 
     </Grid>
 </Window>
