--- a/RPIControllerEmulator_Server/MainWindow.xaml
+++ b/RPIControllerEmulator_Server/MainWindow.xaml
@@ -13,10 +13,10 @@
         </Grid.ColumnDefinitions>
         <!--- Connection -->
         <Label Content="Connection type:" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="uartRadioButton" Content="UART" Margin="200,25,0,0"  Style="{StaticResource RadioButtonStyle}" RenderTransformOrigin="0.75,2.211"/>
-        <RadioButton x:Name="bluetootRadioButton" Content="Bluetooth" Margin="66.266,25,0,0"  Style="{StaticResource RadioButtonStyle}" Grid.Column="1"/>
-        <RadioButton x:Name="networkRadioButton" Content="Network" Margin="266.266,25,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
-        <Label x:Name="connectionStatusLabel" Content="Connection status: Disconnected" FontSize="15" HorizontalAlignment="Left" Width="550"  Margin="10,60,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <RadioButton x:Name="uartRadioButton" GroupName="connectionType" Content="UART" Margin="200,25,0,0"  Style="{StaticResource RadioButtonStyle}" RenderTransformOrigin="0.75,2.211"/>
+        <RadioButton x:Name="bluetootRadioButton" GroupName="connectionType" Content="Bluetooth" Margin="66.266,25,0,0"  Style="{StaticResource RadioButtonStyle}" Grid.Column="1"/>
+        <RadioButton x:Name="networkRadioButton" GroupName="connectionType" Content="Network" Margin="266.266,25,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
+        <Label x:Name="connectionStatusLabel"  Content="Connection status: Disconnected" FontSize="15" HorizontalAlignment="Left" Width="550"  Margin="10,60,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" />
         <Button x:Name="ConnectButton"
             Content="Connect"
             Click="ConnectButton_Click"
@@ -29,10 +29,10 @@
         />
         <!-- Controler type -->
         <Label Content="Controller type:" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Keyboard" Margin="200,110,0,0"  Style="{StaticResource RadioButtonStyle}"/>
-        <RadioButton Content="Joystic" Margin="66.266,110,0,0"  Style="{StaticResource RadioButtonStyle}" Grid.Column="1"/>
-        <RadioButton Content="Remote" Margin="196.266,110,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
-        <RadioButton Content="Custom" Margin="336.266,110,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
+        <RadioButton x:Name="keyboard_RadioButton" GroupName="controllerType" Content="Keyboard" Margin="200,110,0,0"  Style="{StaticResource RadioButtonStyle}"/>
+        <RadioButton x:Name="joystic_RadioButton" GroupName="controllerType" Content="Joystic" Margin="66.266,110,0,0"  Style="{StaticResource RadioButtonStyle}" Grid.Column="1"/>
+        <RadioButton x:Name="remote_RadioButton" GroupName="controllerType" Content="Remote" Margin="196.266,110,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
+        <RadioButton x:Name="custom_RadioButton" GroupName="controllerType" Content="Custom" Margin="336.266,110,0,0" Style="{StaticResource RadioButtonStyle}" Width="130" Grid.Column="1"/>
         <Button x:Name="ShowControllerButton"
             Content="Show Controller"
             Click="ShowControllerButton_Click"
