--- a/RPIControllerEmulator_Server/App.xaml
+++ b/RPIControllerEmulator_Server/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:RPIControllerEmulator_Server"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/Windows/MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="RadioButton" x:Key="RadioButtonStyle">
             <Setter Property="FontSize" Value="12"/>
