--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/App.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View"
+             xmlns:ViewModels="clr-namespace:ViewModel.Pages;assembly=SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel"
              StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
          
