--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/MainPage.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/MainPage.xaml
@@ -1,13 +1,21 @@
 ﻿<UserControl x:Class="SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages.MainPage"
+             
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages"
+             xmlns:local="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages" 
+             xmlns:ViewModels="clr-namespace:ViewModel.Pages;assembly=SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="1080">
     
-    <Grid Margin="10,10,10,10">
+    <UserControl.Resources>
+        <ViewModels:MainPageViewModel x:Key="MainPageVM"/>
+    </UserControl.Resources>
+    
+    <Grid
+        DataContext="{StaticResource MainPageVM}"
+        Margin="10,10,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="5*"/>
             <RowDefinition Height="5*"/>
