--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Windows/MainWindow.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Windows/MainWindow.xaml
@@ -8,6 +8,6 @@
         mc:Ignorable="d"
         Title="Remoter" Height="450" Width="800">
     <Grid>
-        
+        <ContentControl Content="{Binding SelectedViewModel}" />
     </Grid>
 </Window>
