--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/MainPage.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/MainPage.xaml
@@ -1,33 +1,27 @@
 ﻿<UserControl x:Class="SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages.MainPage"
-             
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages" 
              xmlns:ViewModels="clr-namespace:ViewModel.Pages;assembly=SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel"
+             xmlns:Controls="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Controls" 
              mc:Ignorable="d" 
-             d:DesignHeight="720" d:DesignWidth="1080">
-    
-    <UserControl.Resources>
-        <ViewModels:MainPageViewModel x:Key="MainPageVM"/>
-    </UserControl.Resources>
-    
-    <Grid
-        DataContext="{StaticResource MainPageVM}"
-        Margin="10,10,10,10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="5*"/>
-        </Grid.RowDefinitions>
+             d:DesignHeight="720" d:DesignWidth="1080"
+             d:DataContext="{d:DesignInstance Type={x:Type ViewModels:MainPageViewModel}}"
+             >
 
-        <Label Grid.Row="0" 
-               VerticalAlignment="Center"
-               HorizontalAlignment="Stretch"
-               Content="This is label"
-               />
+    <Grid Margin="10,10,10,10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="650*"/>
+            <RowDefinition Height="350*"/>
+        </Grid.RowDefinitions>
+        <Controls:DeviceList
+            DataContext="{Binding DeviceListVM}"
+            Grid.Row="0"
+            />
+
+
 
     </Grid>
 </UserControl>
