--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/MainPage.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/MainPage.xaml
@@ -20,6 +20,11 @@
             DataContext="{Binding DeviceListVM}"
             Grid.Row="0"
             />
+        <TextBox
+            Grid.Row="1"
+            Text="{Binding Text}"
+            />
+        
 
 
 
