--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Controls/DeviceList.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Controls/DeviceList.xaml
@@ -7,12 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="350" d:DesignWidth="640">
     
-    <Grid Margin="10">
+    <Grid Margin="0, 10, 0, 10">
         <Grid.RowDefinitions>
             <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
         </Grid.RowDefinitions>
         <Label
+            Margin="-5, 0, 0, 0"
             Grid.Row="0"
             Content="{Binding LabelContent}"
             />
