--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/MainPage.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/MainPage.xaml
@@ -4,29 +4,68 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages" 
+             xmlns:src="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View"
              xmlns:ViewModels="clr-namespace:ViewModel.Pages;assembly=SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel"
              xmlns:Controls="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Controls" 
              mc:Ignorable="d" 
-             d:DesignHeight="720" d:DesignWidth="1080"
+             d:DesignHeight="480" d:DesignWidth="640"
              d:DataContext="{d:DesignInstance Type={x:Type ViewModels:MainPageViewModel}}"
              >
 
     <Grid Margin="10,10,10,10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="650*"/>
-            <RowDefinition Height="350*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+        
         <Controls:DeviceList
+            Margin="0,0,0,10"
             DataContext="{Binding DeviceListVM}"
             Grid.Row="0"
-            />
-        <TextBox
-            Grid.Row="1"
-            Text="{Binding Text}"
-            />
+        />
+        <Grid Grid.Row="1" Margin="0,0,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="1" 
+                    Content="Start stream"
+                    Margin="5,0,5,0"
+                    Command="{Binding StartStreamCommand}"
+                    >
+                
+            </Button>
+            <Button Grid.Column="2" 
+                    Content="Stop stream"
+                    Margin="5,0,5,0"
+                    Command="{Binding StopStreamCommand}"
+                    >
+
+            </Button>
+
+        </Grid>
         
-
-
-
-    </Grid>
+        <Grid Grid.Row="2" Margin="0,0,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Label
+                Grid.Row="0"
+                Content="Devices stream:"
+            />
+            <TextBox
+            Grid.Row="1"
+            IsReadOnly="True"
+            src:TextBoxBehaviour.ScrollOnTextChanged="True"
+            VerticalScrollBarVisibility="Auto"
+            Text="{Binding StreamOutputText}"
+            />
+        </Grid>
+     </Grid>
 </UserControl>
