--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/App.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/App.xaml
@@ -2,8 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View"
-             xmlns:ViewModel="clr-namespace:ViewModel.Pages;assembly=SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel"
-             xmlns:Pages="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages"
+             xmlns:ViewModel="clr-namespace:ViewModel.Pages;assembly=SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel"             
+             xmlns:ConnectionsViewModel="clr-namespace:ViewModel.Pages.Connections;assembly=SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel"
+             xmlns:Pages="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages"  
+             xmlns:ConnectionPages="clr-namespace:SystemForIndirectUseOfInputDevices.DesktopApplication.View.Pages.Connections"
              StartupUri="Windows/MainWindow.xaml">
     
     <Application.Resources>
@@ -12,6 +14,10 @@
             <Pages:MainPage/>
         </DataTemplate>
 
-        
+        <DataTemplate DataType="{x:Type ConnectionsViewModel:NetworkViewModel}">
+            <ConnectionPages:Network/>
+        </DataTemplate>
+
+
     </Application.Resources>
 </Application>
