--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Controls/DeviceList.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Controls/DeviceList.xaml
@@ -39,7 +39,7 @@
                 <GridView>
                     <GridViewColumn
                         
-                        Header="Forward"
+                        Header="Listen"
                         Width="50">
                         <GridViewColumn.CellTemplate>
                             
