--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/Connections/Network.xaml
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/Pages/Connections/Network.xaml
@@ -35,7 +35,7 @@
             Grid.Row="0"
             Grid.Column="1"
             HorizontalAlignment="Stretch" 
-            Text="{Binding IP}" 
+            Text="{Binding Path=Connector.IP, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
             VerticalAlignment="Center" 
             Margin="5,0,5,0"
             />        
@@ -43,7 +43,7 @@
             Grid.Row="1"
             Grid.Column="1"
             HorizontalAlignment="Stretch" 
-            Text="{Binding Port}" 
+            Text="{Binding Path=Connector.Port, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
             VerticalAlignment="Center" 
             Margin="5,0,5,0"
             />
